# procurement-management

./: .gitignore  ProcureMind — START HERE.txt  ProcureMind.html  Procurement Strategy with Python.ipynb  README.md  SETUP-daily-market-refresh.md  app.js  index.html  market-data.js  procurement_optimization.py  pyproject.toml  refresh_market_data.py  requirements.txt  run.py  should_cost.db
