[project]
name = "should-cost-platform"
version = "1.0.0"
description = "ProcureMind — Should-Cost Intelligence Platform: hybrid (rule-based + ML) should-cost estimation from user-uploaded procurement data."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pulp>=2.8",
]

[project.scripts]
procuremind = "backend.main:run"

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
